fix contrast of overbudge percentages

--- a/src/components/tables.scss
+++ b/src/components/tables.scss
@@ -22,5 +22,5 @@ a, .btn-link, .table-header {
 }
 
 .over-budget {
-    color: red;
+    color: #E60000;
 }
